# weather-rtos

./: .gitignore  CMakeLists.txt  README.md  demo.sh  shutdown.sh  startup.sh  timescale_outbox.sql
aggregator/asia/: main.cpp
aggregator/hierarchical/: main.cpp
aggregator/india/: main.cpp
apps/map_console/: README.md  app.js  index.html  styles.css
apps/weather_dashboard/: README.md  app.js  index.html  sample_comparison.csv  styles.css
collectors/regional/: main.cpp
collectors/south_india/: main.cpp
common/aggregation/: BrokerAggregator.hpp
common/analytics/: MapAnalytics.hpp
common/gateway/: RegionalGateway.hpp
common/metrics/: Metrics.hpp
common/models/: WeatherPacket.hpp
common/pipeline/: ValidationAggregationConsumerPipeline.hpp
common/protocol/: MessageEnvelope.hpp  MessageTypes.hpp
common/publishing/: BrokerPublisher.hpp
common/rt_safe/: CgroupV2Manager.hpp  FlowController.hpp  LocklessRingBuffer.hpp  ZeroCopyTransfer.hpp
common/socket/: TCPSocket.cpp  TCPSocket.hpp
common/subscribing/: IBrokerPublisher.hpp  IBrokerSubscriber.hpp  InProcessBrokerPublisher.hpp  InProcessBrokerSubscriber.hpp  TcpSubscriber.hpp
common/timescale/: AsyncQueueWriter.hpp  TimescaleBatchWriter.hpp  TimescaleDbClient.hpp  TimescaleReadClient.hpp
common/utils/: CitySampling.hpp  LogisticsRouteMapper.hpp  RuntimeConfig.hpp
configs/: baseline_crop.json  baseline_power.json  global_topology.json  india_high_density_logistics.json  logistics_map_phase1_topology.json  rt_kernel_fragment.config  south_india.json
docs/: ARCHITECTURE.md  ARCHITECTURE_SUSTAINABILITY.md  HARDWARE_TELEMETRY_MIGRATION_GUIDE.md  INGESTION_PIPELINE_REPORT.md  LOGISTICS_MAP_PHASE1_PLAN.md  MENTOR_DEMO.md  PORTING.md  QUICKSTART.md  SCALING.md  comm.md
ops/docker/: Dockerfile.writer  README.md  docker-compose.pipeline.yml  docker-compose.yml  install_and_run.sh  vector.toml
ops/grafana/: weather_rtos_dashboard.json
ops/grafana/provisioning/dashboards/: provider.yml
ops/grafana/provisioning/dashboards/json/: weather_rtos_dashboard.json
ops/grafana/provisioning/datasources/: prometheus.yml
ops/native/: README.md  install_grafana.sh  install_prometheus.sh
ops/prometheus/: prometheus.yml
services/map_query_api/: main.cpp
services/personal_comparator/: main.cpp
services/systemd/: map_query_api.service  regional_collector.service  timescale_writer.service
simulator/: main.cpp
timescale/: map_phase1.sql  personal_comparison.sql  schema.sql
timescale/migrations/: 002_region_wide_weather_upgrade.sql  003_postgis_rasters.sql  004_rasterize_aggregates.sql  005_storage_policies.sql  006_ingestion_layers.sql  007_continuous_aggregates.sql
timescale/tests/: verify_continuous_agg.sql
timescale_writer/: main.cpp
tools/: backfill_latlon.py  create_continuous_agg.sh  demo_pipeline.sh  init_db.sh  load_test_ingestion.py  rt_bench.cpp  setup_rt_system.sh  start_continuous_demo.sh  start_full_demo.sh  start_india_logistics.sh  start_ingestion.sh  stop_continuous_demo.sh  stop_full_demo.sh  stop_ingestion.sh  warm_tiles.py
